# TorsionRigidModel

./: .gitignore  CMakeLists.txt  README.md  log.md
scenes/: CTR_geomagic_test.py  CTR_geomagic_test.py.view  CTR_visual_ik_test.py  CTR_visual_test.py  CTR_visual_test.scn
src/TorsionRigidModel/: initTorsionRigidModel.cpp
src/TorsionRigidModel/Controller/: TRMInverseKinematicsEngine.cpp  TRMInverseKinematicsEngine.h
src/TorsionRigidModel/Engine/: TRMForwardKinematicsEngine.cpp  TRMForwardKinematicsEngine.h  TRMInverseKinematicsEngine.cpp  TRMInverseKinematicsEngine.h
src/TorsionRigidModel/Visual/: TRMVisualModel.cpp  TRMVisualModel.h
src/TorsionRigidModel/core/: AnalyticalJacobian.h  ForwardKinematics.cpp  ForwardKinematics.h  InverseKinematics.cpp  InverseKinematics.h  Jacobian.cpp  RobotParameters.h  SectionComputer.cpp  SectionComputer.h
src/TorsionRigidModel/math/: Lie.h
src/TorsionRigidModel/test/: CMakeLists.txt  testSectionComputer.cpp  test_4tubes  test_4tubes.cpp  test_fk  test_fk.cpp  test_ik.cpp  test_lie.cpp  test_sofa_engine.cpp
src/TorsionRigidModel/types/: Frame.h  Section.h  TubeParameters.h
